# datastructures-implementations

./: .gitignore  CMakeLists.txt  README.md  main.c
Core/: CMakeLists.txt
Core/Include/Queues/: sized-int-queue.h
Core/Include/Stacks/: sized-int-stack.h
Core/Source/Queues/: sized-int-queue.c
Core/Source/Stacks/: sized-int-stack.c
Core/include/common/: common.h  generic-node.h
Core/include/queues/: generic-ll-queue.h  int-circ-queue.h
Core/include/stacks/: int-arr-stack.h  int-circ-stack.h
Core/src/queues/: generic-ll-queue.c  int-circ-queue.c  sized-int-queue.c
Core/src/stacks/: int-circ-stack.c  sized-int-stack.c
docs/templates/: template.c  template.h
